--- a/index.html
+++ b/index.html
@@ -10,19 +10,30 @@
 	<center>
 		<div class="ltop">Logo</div>
 		<div class="rtop">Menú</div>
-		<div class="nav">Barra de Navegación</div>
+		<div class="nav"><br>Barra de Navegación</div>
 		<div class="lbody">
-			<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod<br>
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,<br>
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo<br>
-		. Duis aute irure dolor in reprehenderit in voluptate velit esse<br>
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non<br>
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br></h3>
+			<h3>Maqutación Web</h3><br><h5>Es la organización visual de los elementos en una página web</h5>
 		</div>
 		<div class="rbody">
-			<h1>kajsh</h1>
+			<div class="widget">
+				<div class="dia">
+					<p id="DS" class="DS"></p>
+					<p id="D" class="D"></p>
+					<p id="M" class="M"></p>
+					<p id="A" class="A"></p>
+				</div>
+				<div class="hora">
+					<p id="H" class="H"></p>
+					<p id="MIN" class="MIN"></p>
+				<div class="SB">
+					<p id="DN" class="DN"></p>
+					<p id="S" class="S"></p>
+				</div>
+				</div>
+			</div>
 		</div>
-		<div class="footer"></div>
+		<div class="footer"><h3>Daniel Chiguasuque 2021</h3></div>
 	</center>
+	<script src="script.js"></script>
 </body>
 </html>
