--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body class="fondo">
 	<center>
-		<div class="ltop">Logo</div>
-		<div class="rtop">Menú</div>
-		<div class="nav"><br>Barra de Navegación</div>
+		<div class="ltop">Menú</div>
+		<div class="rtop">Logo</div>
+		<div class="nav sombra_radial"><br>Barra de Navegación</div>
 		<div class="lbody">
 			<h3>Maqutación Web</h3><br><h5>Es la organización visual de los elementos en una página web</h5>
 		</div>
